--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ title: {{ site.name }}
 
 <div id="home">
 <h1>Vermilion Project</h1>
-<p>A work in progress</p>
+<p>In Development Raytracer</p>
 </div>
