--- a/index.html
+++ b/index.html
@@ -6,4 +6,5 @@ title: {{ site.name }}
 <div id="home">
 <h1>Vermilion Project</h1>
 <p>In Development Raytracer</p>
+<img alt="Build Status" src="https://travis-ci.org/CasperTheCat/Vermilion.svg?branch=master"/>
 </div>
